[package]
name = "mcbanner"
description = "A simple library to generate Minecraft banner images."
authors = ["Carlos González"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Fudyy/mcbanner"
keywords = ["minecraft", "banner", "image"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
rust-embed = "8.2.0"
